# catalog

./: .env  .env.example  README.md  alembic.ini  docker-compose.yml  pyproject.toml  test-dump.json
app/: main.py  schemas.py  utils.py
app/db/: db.py
app/migrations/: env.py
app/migrations/versions/: 566843b869a7_.py  ca8cea5e1e07_.py  df9ea93d06cc_.py
app/service/: crud.py
app/tables/: __init__.py  models.py
app/view/: catalog.py  products.py  properties.py
